# oadt

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  _CoqProject.demo  _CoqProject.extra  coq-oadt.opam  coq-taypsi.opam  index.html  popl22.md
doc/: custom.js
master/: indexpage.html  oadt.base.html  oadt.demo.demo1.html  oadt.demo.demo2.html  oadt.demo.demo4.html  oadt.demo.demo_prelude.html  oadt.demo.int_prelude.html  oadt.idt.html  oadt.lang.html  oadt.lang_oadt.admissible.html  oadt.lang_oadt.base.html  oadt.lang_oadt.dec.html  oadt.lang_oadt.equivalence.html  oadt.lang_oadt.head.html  oadt.lang_oadt.indistinguishable.html  oadt.lang_oadt.infrastructure.html  oadt.lang_oadt.inversion.html  oadt.lang_oadt.kind.html  oadt.lang_oadt.lifting.html  oadt.lang_oadt.metatheories.html  oadt.lang_oadt.mpared.html  oadt.lang_oadt.obliviousness.html  oadt.lang_oadt.preservation.html  oadt.lang_oadt.progress.html  oadt.lang_oadt.reveal.html  oadt.lang_oadt.semantics.html  oadt.lang_oadt.step_alt.html  oadt.lang_oadt.syntax.html  oadt.lang_oadt.typing.html  oadt.lang_oadt.values.html  oadt.lang_oadt.weakening.html  oadt.ln.html  oadt.prelude.html  oadt.semilattice.html  oadt.tactics.html  toc.html
pure/: indexpage.html  oadt.base.html  oadt.lang_oadt.admissible.html  oadt.lang_oadt.base.html  oadt.lang_oadt.equivalence.html  oadt.lang_oadt.infrastructure.html  oadt.lang_oadt.inversion.html  oadt.lang_oadt.metatheories.html  oadt.lang_oadt.obliviousness.html  oadt.lang_oadt.preservation.html  oadt.lang_oadt.progress.html  oadt.lang_oadt.semantics.html  oadt.lang_oadt.syntax.html  oadt.lang_oadt.typing.html  oadt.lang_oadt.values.html  oadt.ln.html  oadt.semilattice.html  oadt.tactics.html  toc.html
tape/: indexpage.html  oadt.base.html  oadt.demo.demo3.html  oadt.demo.demo_prelude.html  oadt.demo.int.html  oadt.demo.int_prelude.html  oadt.lang_oadt.admissible.html  oadt.lang_oadt.base.html  oadt.lang_oadt.equivalence.html  oadt.lang_oadt.infrastructure.html  oadt.lang_oadt.inversion.html  oadt.lang_oadt.metatheories.html  oadt.lang_oadt.obliviousness.html  oadt.lang_oadt.preservation.html  oadt.lang_oadt.progress.html  oadt.lang_oadt.semantics.html  (+7 more)
(+104 files in other folders)
