opam-version: "2.0"
maintainer: "yeqianchuan@gmail.com"
version: "dev"

homepage: "https://github.com/ccyip/oadt"
dev-repo: "git+https://github.com/ccyip/oadt.git"
bug-reports: "https://github.com/ccyip/oadt/issues"
license: "MIT"

authors: [
  "Qianchuan Ye"
  "Benjamin Delaware"
]

build: [
  [make "-j%{jobs}%"]
  [make "html"] {with-doc}
]
install: [make "install"]

depends: [
  "coq" {>= "8.18" & < "8.20"}
  "coq-stdpp" {>= "1.9.0"}
  "coq-hammer-tactics" {>= "1.3.2"}
  "coq-smpl" {>= "8.18"}
  "coq-idt" {>= "1.1"}
]

synopsis: "Oblivious algebraic data types"
description: """
Formalization of core calculus with oblivious algebraic data types.
"""
tags: [
]
